--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "adminlte",
   "devDependencies": {
     "bootstrap": "~3.3.4",
-    "font-awesome": "~4.3.0"
+    "font-awesome": "~4.3.0",
+    "jquery-ujs": "~1.0.0"
   }
 }
