--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "devDependencies": {
     "gulp": "^3.8.8",
     "gulp-shell": "^0.3.0",
-    "laravel-elixir": "*"
+    "laravel-elixir": "2.*"
   }
 }
