--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "private": true,
   "devDependencies": {
-    "gulp": "^3.8.8",
-    "gulp-shell": "^0.3.0",
-    "laravel-elixir": "2.*"
+    "gulp": "^3.8.8"
+  },
+  "dependencies": {
+    "laravel-elixir": "^4.0.0"
   }
 }
