mass repo rename

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cysha/pxcms-adminlte",
+    "name": "cysha/theme-adminlte",
     "type": "pxcms-themes",
     "description": "AdminLTE Theme for Phoenix CMS",
     "license": "MIT",
